ionos_sbx/dome-certification/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dome-certification-ingress
  namespace: dome-certification
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: certification.dome-marketplace-dev.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: certification-backend
            port:
              number: 8080
  tls:
  - hosts:
    - certification.dome-marketplace-dev.org
    secretName: dome-certification-tls-secret
